<resources>
    <string name="app_name">Music Distribution</string>

    <!-- Strings related to authentication -->
    <string name="title_activity_auth">AuthActivity</string>
    <string name="registration_fragment_label">Create account</string>
    <string name="button_sign_up">Sign Up</string>
    <string name="button_logout">Sign Out</string>
    <string name="button_log_in">Sign In</string>
    <string name="registration_title">Create Account</string>
    <string name="login_email">Enter your username</string>
    <string name="login_password">Enter your password</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="user_creator">Creator</string>
    <string name="user_listener">Listener</string>
    <string name="hint_text_username">Domains: %1$s</string>
    <string name="note_oauth_login">Available only for listeners</string>
    <string name="logo_description">The logo image for the application</string>
    <string name="password_hint">Enter at least 6 characters</string>
    <string name="username_hint">eg. `test.example@yahoo.com`</string>

    <!-- Strings related to songs -->
    <string name="song_genre_placeholder">[song_genre]</string>
    <string name="song_title_placeholder">[song_title]</string>
    <string name="artist_name_placeholder">[artist_name]</string>
    <string name="artist_personal_info">[personal_info]</string>
    <string name="album_name_placeholder">[album_name]</string>
    <string name="image_placeholder">Home fragment item image</string>
    <string name="length_placeholder">[length]</string>
    <string name="length_parameter_placeholder">Length: %1$s</string>
    <string name="location_placeholder">[location]</string>
    <string name="date_time_placeholder">[date_time]</string>

    <string name="button_follow">Follow</string>
    <string name="create_dialog_title">What is the action you want to take?</string>
    <string name="publish_album_title">Publish an Album</string>
    <string name="publish_song_title">Publish a Song</string>
    <string name="exit_dialog">Exit</string>
    <string name="dot_text">⚫</string>
    <string name="floating_button_description">Button used to display an e-mail action</string>

    <!-- Strings related to publish/create -->
    <string name="song_create_title">Publish a Song</string>
    <string name="song_name_placeholder">Enter the song name</string>
    <string name="song_length_placeholder_ya">Enter the song length (seconds)</string>
    <string name="song_create_button">Publish</string>
    <string name="cancel_button">Cancel</string>
    <string name="song_create_note_1">** If you do not choose an album to publish the song to, the one will be a single</string>
    <string name="song_create_add_picture">Change</string>
    <string name="album_create_title">Publish an Album</string>
    <string name="total_album_cost">Total album cost:</string>
    <string name="raise_tier_title">Raise Album TIer</string>
    <string name="album_raise_note_1">** You will not be able to reduce the album tier; you will either have to raise it or leave it at its current level</string>

    <!-- Strings related to search -->
    <string name="search_title">Search</string>
    <string name="search_placeholder">Artists, Songs or Albums …</string>
    <string name="search_favourite_genre_title">Genres of music we offer</string>

    <!-- Strings related to profile -->
    <string name="profile_name">Your name</string>
    <string name="profile_surname">Your surname</string>
    <string name="profile_favourite_artist">Your favourite user</string>
    <string name="profile_name_placeholder">Enter your name</string>
    <string name="profile_surname_placeholder">Enter your surname</string>
    <string name="text_followers">Followers</string>
    <string name="text_following">Following</string>
    <string name="button_favourite_songs">Songs</string>
    <string name="button_favourite_artists">Artists</string>
    <string name="button_published_songs">Published Songs</string>
    <string name="button_published_albums">Published Albums</string>
    <string name="button_edit_profile">Edit Info</string>
    <string name="button_edit_picture">Edit Picture</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>