<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    app:circularflow_radiusInDP="20dp"
    android:padding="40dp">

    <TextView
        android:id="@+id/dialogTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:gravity="center"
        android:text="@string/create_dialog_title"
        android:textSize="16dp"
        android:textStyle="bold" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnPublishAlbum"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:backgroundTint="@color/orange"
        android:text="@string/publish_album_title"
        android:textColor="@color/white"
        android:padding="10dp"
        app:cornerRadius="50dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnPublishSong"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:backgroundTint="@color/orange"
        android:text="@string/publish_song_title"
        android:textColor="@color/white"
        android:padding="10dp"
        app:cornerRadius="50dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnRaiseTier"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:backgroundTint="@color/orange"
        android:text="@string/raise_tier_title"
        android:textColor="@color/white"
        android:padding="10dp"
        app:cornerRadius="50dp" />

</LinearLayout>