<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    tools:context=".ui.profile.ProfileListenerFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/imageProfileListener"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_centerHorizontal="true"
        android:elevation="12dp"
        android:innerRadius="0dp"
        android:shape="ring"
        android:thicknessRatio="1.9"
        app:cardCornerRadius="100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.127">

        <ImageView
            android:id="@+id/profileImageListener"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:src="@tools:sample/avatars" />
    </androidx.cardview.widget.CardView>


    <TextView
        android:id="@+id/txtNameSurnameListener"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="[name_surname]"
        android:textAlignment="center"
        android:textSize="30dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/imageProfileListener"
        app:layout_constraintHorizontal_bias="0.512"
        app:layout_constraintStart_toStartOf="@+id/imageProfileListener"
        app:layout_constraintTop_toBottomOf="@+id/imageProfileListener" />

    <TextView
        android:id="@+id/txtNoFollowingTitleListener"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="108dp"
        android:layout_marginEnd="16dp"
        android:text="@string/text_following"
        app:layout_constraintEnd_toStartOf="@+id/imageProfileListener"
        app:layout_constraintHorizontal_bias="0.629"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtNoFollowingListener"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="0"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/txtNoFollowingTitleListener"
        app:layout_constraintEnd_toEndOf="@+id/txtNoFollowingTitleListener"
        app:layout_constraintHorizontal_bias="0.53"
        app:layout_constraintStart_toStartOf="@+id/txtNoFollowingTitleListener" />

    <TextView
        android:id="@+id/txtNoFollowersTitleListener"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="108dp"
        android:text="@string/text_followers"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/imageProfileListener"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtNoFollowersListener"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="0"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/txtNoFollowersTitleListener"
        app:layout_constraintEnd_toEndOf="@+id/txtNoFollowersTitleListener"
        app:layout_constraintHorizontal_bias="0.54"
        app:layout_constraintStart_toStartOf="@+id/txtNoFollowersTitleListener" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnFavouriteArtistsListener"
        android:layout_width="150dp"
        android:layout_height="55dp"
        android:backgroundTint="@color/orange"
        android:text="@string/button_favourite_artists"
        android:textColor="@color/white"
        app:cornerRadius="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.85"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtNameSurnameListener"
        app:layout_constraintVertical_bias="0.263" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnFavouriteSongsListener"
        android:layout_width="150dp"
        android:layout_height="55dp"
        android:backgroundTint="@color/orange"
        android:text="@string/button_favourite_songs"
        android:textColor="@color/white"
        app:cornerRadius="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.16"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtNameSurnameListener"
        app:layout_constraintVertical_bias="0.263" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnEditImageListener"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:background="@drawable/border"
        android:text="@string/button_edit_picture"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.777"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.246" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnEditProfileListener"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:background="@drawable/border"
        android:text="@string/button_edit_profile"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.141"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.246" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="172dp"
        android:background="@color/gray"
        android:orientation="vertical"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        app:layout_constraintEnd_toEndOf="@+id/txtNameSurnameListener"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="@+id/txtNameSurnameListener"
        app:layout_constraintTop_toBottomOf="@+id/txtNameSurnameListener">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:orientation="horizontal"
                android:paddingBottom="10dp">

                <TextView
                    android:id="@+id/txtProfileNameListener"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".75"
                    android:text="@string/profile_name"
                    android:textSize="15sp" />

                <EditText
                    android:id="@+id/profileNameInputListener"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.25"
                    android:hint="@string/profile_name_placeholder"
                    android:textSize="15sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:orientation="horizontal"
                android:paddingBottom="10dp">

                <TextView
                    android:id="@+id/txtProfileSurnameListener"
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".75"
                    android:text="@string/profile_surname"
                    android:textSize="15sp" />

                <EditText
                    android:id="@+id/profileSurnameInputListener"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.25"
                    android:hint="@string/profile_surname_placeholder"
                    android:textSize="15sp" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/btnLogout"
        style="@style/Widget.MaterialComponents.Button.Icon"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:background="@drawable/border"
        android:text="@string/button_logout"
        app:icon="@drawable/ic_logout"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="@+id/btnFavouriteArtistsListener"
        app:layout_constraintHorizontal_bias="0.446"
        app:layout_constraintStart_toStartOf="@+id/btnFavouriteSongsListener"
        app:layout_constraintTop_toBottomOf="@+id/txtNameSurnameListener"
        app:layout_constraintVertical_bias="0.225" />

</androidx.constraintlayout.widget.ConstraintLayout>