<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    tools:context=".ui.home.publish.PublishAlbumFragment">

    <androidx.appcompat.widget.AppCompatSpinner
        android:id="@+id/inputRaiseTierAlbum"
        android:layout_width="300dp"
        android:layout_height="37dp"
        android:elevation="0dp"
        android:popupElevation="10dp"
        app:layout_constraintBottom_toTopOf="@+id/inputRaiseTIerTier"
        app:layout_constraintEnd_toEndOf="@+id/txtPublishAlbumTitle"
        app:layout_constraintHorizontal_bias="0.535"
        app:layout_constraintStart_toStartOf="@+id/txtPublishAlbumTitle"
        app:layout_constraintTop_toBottomOf="@+id/txtDotCreate"
        app:layout_constraintVertical_bias="0.512" />

    <TextView
        android:id="@+id/txtTotalCostAlbumTier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/total_album_cost"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/btnConfirmRaiseTier"
        app:layout_constraintEnd_toEndOf="@+id/inputRaiseTIerTier"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/inputRaiseTIerTier"
        app:layout_constraintTop_toBottomOf="@+id/inputRaiseTIerTier"
        app:layout_constraintVertical_bias="0.571" />

    <TextView
        android:id="@+id/txtAlbumRaiseCost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="5 €"
        android:textSize="18dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/btnCancelRaiseTier"
        app:layout_constraintEnd_toEndOf="@+id/inputRaiseTIerTier"
        app:layout_constraintHorizontal_bias="0.974"
        app:layout_constraintStart_toStartOf="@+id/inputRaiseTIerTier"
        app:layout_constraintTop_toBottomOf="@+id/inputRaiseTIerTier"
        app:layout_constraintVertical_bias="0.595" />

    <Button
        android:id="@+id/btnCancelRaiseTier"
        android:layout_width="135dp"
        android:layout_height="55dp"
        android:background="@drawable/border"
        android:text="@string/cancel_button"
        android:textSize="14dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/inputRaiseTIerTier"
        app:layout_constraintHorizontal_bias="0.957"
        app:layout_constraintStart_toStartOf="@+id/inputRaiseTIerTier"
        app:layout_constraintTop_toBottomOf="@+id/inputRaiseTIerTier"
        app:layout_constraintVertical_bias="0.362" />

    <TextView
        android:id="@+id/txtRaiseTierNote"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/album_raise_note_1"
        android:textSize="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/btnCancelRaiseTier"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/btnConfirmRaiseTier"
        app:layout_constraintTop_toBottomOf="@+id/inputRaiseTIerTier"
        app:layout_constraintVertical_bias="0.586" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnConfirmRaiseTier"
        android:layout_width="140dp"
        android:layout_height="65dp"
        android:backgroundTint="@color/orange"
        android:text="@string/song_create_button"
        android:textColor="@color/white"
        app:cornerRadius="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/inputRaiseTIerTier"
        app:layout_constraintHorizontal_bias="0.006"
        app:layout_constraintStart_toStartOf="@+id/inputRaiseTIerTier"
        app:layout_constraintTop_toBottomOf="@+id/inputRaiseTIerTier"
        app:layout_constraintVertical_bias="0.364" />

    <androidx.appcompat.widget.AppCompatSpinner
        android:id="@+id/inputRaiseTIerTier"
        android:layout_width="300dp"
        android:layout_height="37dp"
        android:elevation="0dp"
        android:popupElevation="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/txtPublishAlbumTitle"
        app:layout_constraintHorizontal_bias="0.535"
        app:layout_constraintStart_toStartOf="@+id/txtPublishAlbumTitle"
        app:layout_constraintTop_toBottomOf="@+id/txtDotCreate"
        app:layout_constraintVertical_bias="0.286" />

    <TextView
        android:id="@+id/txtPublishAlbumTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/raise_tier_title"
        android:textSize="35dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.116" />

    <TextView
        android:id="@+id/txtDotCreate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dot_text"
        android:textSize="10dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.227" />

</androidx.constraintlayout.widget.ConstraintLayout>