<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    tools:context=".ui.search.SearchFragment">

    <TextView
        android:id="@+id/searchTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search_title"
        android:textColor="@color/lighter_black"
        android:textSize="55sp"
        android:textStyle="bold"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.19" />

    <Button
        android:id="@+id/btnEnableSearch"
        style="@style/Widget.MaterialComponents.Button.Icon"
        android:layout_width="310dp"
        android:layout_height="58dp"
        android:backgroundTint="@color/white"
        android:enabled="true"
        android:foregroundTint="@color/white"
        android:hint="@string/search_placeholder"
        android:scrollbarSize="25dp"
        android:shadowRadius="0"
        android:textAlignment="textStart"
        android:textAllCaps="false"
        android:textColor="@color/lighter_black"
        android:textSize="14sp"
        app:icon="@drawable/ic_search"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchTitle"
        app:layout_constraintVertical_bias="0.04" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/mainGenreRecyclerView"
        android:layout_width="325dp"
        android:layout_height="300dp"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/btnEnableSearch"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/btnEnableSearch"
        app:layout_constraintTop_toBottomOf="@+id/favouriteGenresSearchTitle"
        app:layout_constraintVertical_bias="0.794" />

    <TextView
        android:id="@+id/favouriteGenresSearchTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/search_favourite_genre_title"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/btnEnableSearch"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/btnEnableSearch"
        app:layout_constraintTop_toBottomOf="@+id/btnEnableSearch"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>